--- a/app/main/templates/main/materials/list.html
+++ b/app/main/templates/main/materials/list.html
@@ -6,7 +6,7 @@ block content %}
       <h1>Course Materials</h1>
     </div>
     <div class="col-md-4 text-end">
-      {% if current_user.is_authenticated %}
+      {% if current_user.is_authenticated and is_instructor(current_user)%}
       <a href="{{ url_for('main.create_material') }}" class="btn btn-primary"
         >+ Upload Material</a
       >
