--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,6 +45,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('main.list_courses') }}">Courses</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{{url_for('main.list_materials')}}"
                 >Materials</a
               >
@@ -55,7 +58,10 @@
           <ul class="navbar-nav ms-auto">
             {% if current_user.is_authenticated%}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+              <a class="nav-link" href="{{ url_for('main.dashboard') }}">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout ({{ current_user.username }})</a>
             </li>
             {% else %}
             <li class="nav-item">
